<resources>
    <string name="app_name">Todo App</string>
    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_cancel">Do you want to return to main screen?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome to Todo App</string>
    <string name="textview">TextView</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>


    <string name="SignUp">SignUp</string>

    <string name="confirm_password">confirm password</string>
    <string name="register">SignUp</string>

    <string name="already_registered">Already have an account?</string>
    <string name="signup">signup</string>
    <string name="create_user">Create a new account!</string>
    <string name="rate_item">All item deleted successfully!</string>
</resources>

    <!--<string name="username">username</string>-->
    <!--<string name="password">password</string>-->
    <!--<string name="login">lOGIN</string>-->
    <!--<string name="not_registered">not_registered?</string>-->
    <!--<string name="register">REGISTER</string>-->
    <!--<string name="confirm_password">confirm password</string>-->
    <!--<string name="already_registered">already_registered</string>-->
